remove old libs